# wrench

./: .gitignore  CMakeLists.txt  LICENSE  PKGBUILD  README.md  wrench.desktop
drawer/: hyprland.json
src/: CMakeLists.txt  config.cpp  config.hpp  main.cpp  main_window.cpp  main_window.hpp
src/qss/: main_window.qss
